Added account registration for new users

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".HomeActivity" />
         <activity android:name=".CameraActivity" />
+        <activity android:name=".RegisterActivity" />
     </application>
 
 </manifest>
