Added logo to login and register page

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Apr 09 10:08:28 CDT 2025
-sdk.dir=/Users/gageward/Library/Android/sdk
+sdk.dir=C\:\\Users\\rgwar\\AppData\\Local\\Android\\Sdk
