--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,7 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Apr 09 10:08:28 CDT 2025
-sdk.dir=C\:\\Users\\rgwar\\AppData\\Local\\Android\\Sdk
+#Windows sdk
+#sdk.dir=C\:\\Users\\rgwar\\AppData\\Local\\Android\\Sdk
+#Mac Sdk
+sdk.dir=/Users/gageward/Library/Android/sdk
