--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 09 10:08:28 CDT 2025
-#Windows sdk
-#sdk.dir=C\:\\Users\\rgwar\\AppData\\Local\\Android\\Sdk
-#Mac Sdk
-sdk.dir=/Users/gageward/Library/Android/sdk
+#Thu Apr 17 18:29:40 CDT 2025
+sdk.dir=C\:\\Users\\rgwar\\AppData\\Local\\Android\\Sdk
