Implemented ML Kit to camera but need to test on macbook for further results

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".HomeActivity" />
         <activity android:name=".CameraActivity" />
         <activity android:name=".RegisterActivity" />
+        <activity android:name=".PrescriptionFormActivity" />
     </application>
 
 </manifest>
