Changed OCR logic for daily dosage

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 17 20:53:57 CDT 2025
-sdk.dir=/Users/gageward/Library/Android/sdk
+#Wed Apr 23 09:46:48 CDT 2025
+sdk.dir=C\:\\Users\\rgwar\\AppData\\Local\\Android\\Sdk
