--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 23 09:46:48 CDT 2025
-sdk.dir=C\:\\Users\\rgwar\\AppData\\Local\\Android\\Sdk
+#Mon May 05 09:59:47 CDT 2025
+sdk.dir=/Users/gageward/Library/Android/sdk
